2005-08-07  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* GL/mesa/X/.cvsignore:
	* Xext/extmod/.cvsignore:
	* afb/.cvsignore:
	* cfb/.cvsignore:
	* cfb16/.cvsignore:
	* cfb24/.cvsignore:
	* cfb32/.cvsignore:
	* hw/dmx/.cvsignore:
	* hw/dmx/config/.cvsignore:
	* hw/vfb/.cvsignore:
	* hw/xfree86/.cvsignore:
	* hw/xfree86/common/.cvsignore:
	* hw/xfree86/dixmods/.cvsignore:
	* hw/xfree86/exa/.cvsignore:
	* hw/xfree86/os-support/linux/drm/.cvsignore:
	* hw/xfree86/ramdac/.cvsignore:
	* hw/xfree86/scanpci/.cvsignore:
	* hw/xfree86/x86emu/.cvsignore:
	* hw/xfree86/xaa/.cvsignore:
	* hw/xfree86/xf1bpp/.cvsignore:
	* hw/xfree86/xf4bpp/.cvsignore:
	* hw/xnest/.cvsignore:
	* include/.cvsignore:
	* mfb/.cvsignore:
	Add autogenerated source files and other
	various non-CVS material to .cvsignore files
	
	* hw/xfree86/exa/Makefile.am:
	Use XORG_CFLAGS.  Ensure that all exa files are in SOURCES
	
	* include/dix-config.h.in:
	remove _XOPEN_SOURCE as it's always in xtrans.pc these days
	and gcc whines
	
	* configure.ac:
	libdamage.la needs libcw.la when COMPOSITE is defined,
	but that libdamage.la must be after libcomposite.la, so
	add libcw.la to DAMAGE_LIB instead of EXTENSION_LIBS.
	Regularize library link order across all X servers

2005-08-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Invert the sense of the composite configure flag to match reality.

2005-08-07  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* miext/damage/Makefile.am:
	Bug #3989: Fix Composite builds, enable Composite build by default.
	(Olli Helenius)

2005-08-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/Makefile.am:
	* hw/xfree86/os-support/bus/Makefile.am:
	EXTRA_DIST hacks to get all the OS support files into the tarball.

2005-08-04  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	* GL/Makefile.am:
	* GL/include/Makefile.am:
	* GL/include/GL/Makefile.am:
	* hw/xfree86/os-support/solaris/Makefile.am:
	* hw/xfree86/scanpci/Makefile.am: